# PIP-YuukoLane

./: LICENSE  README.md  pyproject.toml
src/yuukolane/: cli.py  dicionario.json  validador.py  yuukolane_transpiler.py
src/yuukolane.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
